<resources>
    <string name="app_name">Intent injector</string>
    <string name="filename_hint">Имя файла</string>
    <string name="welcome_peasant_enter_the_code">Welcome peasant, enter the code.</string>
    <string name="submit_sms_code">Submit</string>
    <string name="the_code_please">The code, please</string>
    <string name="default_package_name">bar.gtfo.bankintent</string>
    <string name="default_file_name">phone.txt</string>
    <string name="default_class_name">bar.gtfo.bankintent.InsecureWebViewActivity</string>
    <string name="set_target">Set targets</string>
    <string name="inject">Inject</string>
</resources>