<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bar.gtfo.intent_injector.MainActivity">


    <Button
        android:id="@+id/start_listen_to_sms_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Initialize sms listener"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/class_name_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/default_class_name"
        android:minHeight="48dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_listen_to_sms_button" />

    <EditText
        android:id="@+id/package_name_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/default_package_name"
        android:minHeight="48dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/class_name_edit_text" />

    <EditText
        android:id="@+id/file_name_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/default_file_name"
        android:minHeight="48dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/package_name_edit_text" />

    <Button
        android:id="@+id/set_target_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/set_target"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/file_name_edit_text" />

    <Button
        android:id="@+id/inject_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/inject"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_target_button" />

    <Spinner
        android:id="@+id/mode_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:label="label"
        app:layout_constraintTop_toBottomOf="@+id/inject_button" />


</androidx.constraintlayout.widget.ConstraintLayout>